--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -360,7 +360,7 @@ button{
 	font-size: 32px;
 }
 
-@media (min-width: 1280px) and (max-width: 1500px){
+@media (min-device-width: 1280px) and (max-device-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -368,14 +368,14 @@ button{
 	
 }
 
-@media (min-width: 960px) and (max-width: 1280px){
+@media (min-device-width: 960px) and (max-device-width: 1280px){
 	
 	html{
 		font-size: 6px;
 	}
 	
 }
-@media (min-width: 600px) and (max-width: 960px){
+@media (min-device-width: 600px) and (max-device-width: 960px){
 	
 	
 	html{
@@ -385,7 +385,7 @@ button{
 	
 }
 
-@media (min-width: 376px) and (max-width: 600px){
+@media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	
 	html{
@@ -394,7 +394,7 @@ button{
 	
 }
 
-@media (min-width: 100px) and (max-width: 375px){
+@media (min-device-width: 100px) and (max-device-width: 375px){
 	
 	html{
 		font-size: 1px;
