--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -99,6 +99,7 @@
 .Bar350:before{
 	position: absolute;
 	content: "";
+	margin-top: 25%;
 	width: 285%;
 	padding-bottom: 220%;
 	background-color: rgba(28,98,63,0.5);
