--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2067,7 +2067,7 @@
 }
 .FireForest{
 	width: 100%;
-	background-color: #6B8898 ;
+	background-color: #9AA5B0 ;
 	height: 11.1%;
 	font-size: 2.2rem;
 	line-height: 0;
