--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -922,7 +922,7 @@
 }
 
 .OceanAcidification:hover{
-	background-color: #B1C3D5;
+	background-color: #C4CDD3;
 	transition: 0.6s;
 
 }
@@ -2078,7 +2078,7 @@
 }
 
 .FireForest:hover{
-	background-color: #B1C3D5;
+	background-color: #C4CDD3;
 	transition: 0.6s;
 
 }
@@ -4082,7 +4082,7 @@
 
 
 .FoodShortage:hover{
-	background-color: #B1C3D5;
+	background-color: #C4CDD3;
 	transition: 0.6s;
 
 }
