--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -335,3 +335,171 @@
 	color: #ffffff;
 	
 }
+
+.tube-Mobile{
+	position: absolute;
+	z-index: 11;
+	width: 100%;
+	margin-left: 0%;
+	margin-top: 1%;
+}
+
+.indoor-Mobile{
+	position: absolute;
+	z-index: 11;
+	margin-left: 28.125%;
+	margin-top: -1.5%;
+	width: 26.04%;
+	color: #ffffff;
+	font-size: 4rem;
+	font-weight: bold;
+	text-align: center;
+}
+.indoorline-Mobile{
+	z-index: 11;
+	position: absolute;
+	width: 1%;
+	padding-bottom: 20%;
+	border-radius: 5px;
+	background-color: #fff;
+	margin-top: -32.5%;
+	margin-left: 72.5%;
+}
+.indoorpra{
+	position: absolute;
+	font-size: 2rem;
+	width: 100%;
+	margin-left: 75%;
+	margin-top: -35%;
+	text-align: left;
+	font-weight: normal;
+
+}
+.Longtime-Mobile{
+	position: absolute;
+	z-index: 12;
+	margin-top: 17.5%;
+	margin-left: 62%;
+	color: #ffffff;
+	font-weight: 400;
+	font-size: 2.66rem;
+	
+}
+.LongtimeContent-Mobile{
+	margin-top: -13.5%;
+	font-size: 1.5rem;
+	line-height: 1.5;
+}
+.AfterLongtime-Mobile{
+	margin-left: 15%;
+	margin-top: 10%;
+	line-height: 0;
+}
+.LongtimeShapeRT-Mobile{
+	position: absolute;
+	z-index: 13;
+	margin-top: 18%;
+	margin-left: 32%;
+	width: 25%;
+	
+	
+}
+
+.Barchart-Mobile{
+	position: absolute;
+	z-index: 12;
+	margin-top: 20%;
+	margin-left: 0%;
+	width: 100%;
+}
+.Bar350-Mobile{
+	position: absolute;
+	margin-top: 0%;
+	margin-left: 0%;
+	width: 0.7%;
+	padding-bottom: 1.5%;
+	background-color: #1C623F;
+	opacity: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.Bar350-Mobile:before{
+	position: absolute;
+	content: "";
+	margin-top: 225%;
+	width: 285%;
+	padding-bottom: 220%;
+	background-color: rgba(28,98,63,0.5);
+	
+}
+.Bar350content-Mobile{
+	position: absolute;
+	z-index: 12;
+	color: #ffffff;
+	margin-left: 2.5%;
+	margin-top: -2%;
+	line-height: 0.8;
+}
+.Bar350value-Mobile{
+	margin-left: -20%;
+}
+.Bar1000-Mobile{
+	position: absolute;
+	margin-top: 4.5%;
+	margin-left: 0%;
+	width: 2%;
+	padding-bottom: 1.5%;
+	background: #518551 0% 0% no-repeat padding-box;
+	opacity: 1;
+	
+}
+.Bar1000-Mobile:before{
+	position: absolute;
+	content: "";
+	width: 200%;
+	padding-bottom: 75%;
+	background-color: rgba(81,136,81,0.2);
+	
+}
+.Bar1000content-Mobile{
+	position: absolute;
+	z-index: 12;
+	color: #ffffff;
+	margin-left: 4.5%;
+	margin-top: 2.5%;
+	line-height: 0.8;
+}
+.Bar1000value-{
+	margin-left: -15%;
+}
+.Bar2000-Mobile{
+	position: absolute;
+	margin-top: 9%;
+	margin-left: 0%;
+	width: 4%;
+	padding-bottom: 1.5%;
+	background-color: #8AAD64;
+	opacity: 1;
+}
+.Bar2000-Mobile:before{
+	position: absolute;
+	content: "";
+	width: 250%;
+	padding-bottom: 37.5%;
+	background-color:#8AAD64;
+	opacity: 0.2;
+	
+}
+.Bar2000content-Mobile{
+	position: absolute;
+	z-index: 12;
+	color: #ffffff;
+	margin-left: 10.5%;
+	margin-top: 7%;
+	line-height: 0.8;
+	
+}
+.Bar2000value-Mobile{
+	margin-left: -25%;
+}
