--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -93,6 +93,19 @@ button{
 	padding-bottom: 56%;
 	background-color: transparent;
 	font-size: 1.33rem;
+	display: block;
+}
+.view3-Mobile{
+	font-family: Gen Jyuu Gothic ;
+	position: absolute;
+	z-index: 5;
+	margin-top: 112%;
+	left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: transparent;
+	font-size: 1.33rem;
+	display: none;
 }
 .view4{
 	font-family: Gen Jyuu Gothic ;
@@ -453,6 +466,12 @@ button{
 	.Ab{
 		font-size: 10rem;
 	}
+	.view3{
+		display: none;
+	}
+	.view3-Mobile{
+		display: block;
+	}
 }
 
 @media (min-device-width: 100px) and (max-device-width: 375px){
@@ -524,5 +543,11 @@ button{
 	}
 	.Ab{
 		font-size: 12rem;
-	}	
+	}
+	.view3{
+		display: none;
+	}
+	.view3-Mobile{
+		display: block;
+	}
 }
