--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -322,7 +322,7 @@
 	width: 23.23%;
 	border: none;
 	outline: none;
-	display: flex;
+	display: block;
 	align-items: center;
 	justify-content: center;
 }
@@ -346,7 +346,7 @@
 	width: 23.23%;
 	border: none;
 	outline: none;
-	display: flex;
+	display: block;
 	align-items: center;
 	justify-content: center;
 	
