--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -351,7 +351,7 @@
 	justify-content: center;
 	
 }
-#inside{
+.Boxoutside-Mobile{
 	position: absolute;
 	z-index: 8;
 	background-color: transparent;
