--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -358,7 +358,7 @@
 	margin-left: 24.84%;
 	margin-top: 12%;
 	width: 23.23%;
-	border: none;
+	border: 2px solid red;
 	outline: none;
 	align-items: center;
 	justify-content: center;
@@ -371,7 +371,7 @@
 	margin-left: 55%;
 	margin-top: 12%;
 	width: 23.23%;
-	border: none;
+	border: 2px solid yellow;
 	outline: none;
 	align-items: center;
 	justify-content: center;
