--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -351,6 +351,18 @@
 	justify-content: center;
 	
 }
+.Insidetitle{
+	font-family: Gen Jyuu Gothic;
+	position: absolute;
+	z-index: 9;
+	color: #ffffff;
+	line-height: 3.3;
+	font-size: 3.3rem;
+	font-weight: bold;
+	
+	
+}
+
 .Boxoutside-Mobile{
 	position: absolute;
 	z-index: 8;
@@ -363,6 +375,16 @@
 	align-items: center;
 	justify-content: center;
 	display: none;
+}
+.Outsidetitle-Mobile{
+	font-family: Gen Jyuu Gothic;
+	position: absolute;
+	z-index: 9;
+	color: #ffffff;
+	line-height: 3.3;
+	font-size: 3.3rem;
+	font-weight: bold;
+	
 }
 .Boxinside-Mobile{
 	position: absolute;
@@ -378,7 +400,8 @@
 	display: none;
 	
 }
-.Insidetitle{
+
+.Insidetitle-Mobile{
 	font-family: Gen Jyuu Gothic;
 	position: absolute;
 	z-index: 9;
@@ -389,7 +412,6 @@
 	
 	
 }
-
 @media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	.Outsidetitle{
