--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -320,7 +320,7 @@
 	margin-left: 24.84%;
 	margin-top: 12%;
 	width: 23.23%;
-	border: none;
+	border: flex;
 	outline: none;
 	display: block;
 	align-items: center;
@@ -346,7 +346,7 @@
 	width: 23.23%;
 	border: none;
 	outline: none;
-	display: block;
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	
