--- a/網頁/AttackPage/AtackPagePart2.css
+++ b/網頁/AttackPage/AtackPagePart2.css
@@ -450,10 +450,10 @@
 	}
 	.Boxoutside-Mobile{
 		
-		display: block;
+		display: flex;
 	}
 	.Boxinside-Mobile{
-		display: block;
+		display: flex;
 	}
 }
 
@@ -481,9 +481,9 @@
 	}
 	.Boxoutside-Mobile{
 		
-		display: block;
+		display: flex;
 	}
 	.Boxinside-Mobile{
-		display: block;
+		display: flex;
 	}
 }
