--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -83,6 +83,8 @@
 	margin-top: 20%;
 	margin-left: 0%;
 	width: 100%;
+	padding-bottom: 35%;
+	border: 2px solid yellow;
 }
 .Bar350{
 	position: absolute;
