--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -342,7 +342,7 @@
 	z-index: 11;
 	width: 100%;
 	margin-left: 0%;
-	margin-top: 1%;
+	margin-top: 2%;
 }
 
 .indoor-Mobile{
@@ -366,9 +366,9 @@
 	margin-top: -32.5%;
 	margin-left: 72.5%;
 }
-.indoorpra{
+.indoorpra-Mobile{
 	position: absolute;
-	font-size: 2rem;
+	font-size: 3rem;
 	width: 100%;
 	margin-left: 75%;
 	margin-top: -35%;
