--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -536,19 +536,21 @@
 }
 @media (min-device-width: 600px) and (max-device-width: 960px){
 	
-	.indoor{
-		font-size: 3.6rem;
-	}
-	
-	.indoorpra{
-		font-size: 1.8rem;
-	
-	}
+		
 }
 
 @media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	
+	.indoorline-Mobile{
+		margin-top: -40%;
+	}
+	
+	.indoorpra-Mobile{
+		
+		margin-top: -45%;
+	
+	}
 	
 }
 
