--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -541,7 +541,9 @@
 
 @media (min-device-width: 376px) and (max-device-width: 600px){
 	
-	
+	.indoor-Mobile{
+		margin-top: 1.25%;
+	}
 	.indoorline-Mobile{
 		margin-top: -50%;
 	}
