--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -545,12 +545,13 @@
 		margin-top: 1.25%;
 	}
 	.indoorline-Mobile{
-		margin-top: -50%;
+		margin-top: -75%;
+		padding-bottom: 100%;
 	}
 	
 	.indoorpra-Mobile{
 		
-		margin-top: -50%;
+		margin-top: -60%;
 	
 	}
 	
