--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -542,16 +542,16 @@
 @media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	.indoor-Mobile{
-		margin-top: 1.25%;
+		margin-top: 1.%;
 	}
 	.indoorline-Mobile{
-		margin-top: -75%;
+		margin-top: -60%;
 		padding-bottom: 100%;
 	}
 	
 	.indoorpra-Mobile{
 		
-		margin-top: -60%;
+		margin-top: -55%;
 	
 	}
 	
