--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -542,7 +542,7 @@
 @media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	.indoor-Mobile{
-		margin-top: 1.%;
+		margin-top: 1%;
 	}
 	.indoorline-Mobile{
 		margin-top: -60%;
