--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -545,9 +545,8 @@
 		margin-top: 0.8%;
 	}
 	.indoorline-Mobile{
-		margin-top: -500%;
-		height: 200%;
-		
+		margin-top: -60%;
+		padding-bottom: 150%;		
 	}
 	
 	.indoorpra-Mobile{
