--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -442,7 +442,7 @@
 }
 .Bar1000-Mobile{
 	position: absolute;
-	margin-top: 30%;
+	margin-top: 32.5%;
 	margin-left: 0%;
 	width: 2%;
 	padding-bottom: 3%;
@@ -463,8 +463,9 @@
 	z-index: 12;
 	color: #ffffff;
 	margin-left: 4.5%;
-	margin-top: 2.5%;
+	margin-top: 32.5%;
 	line-height: 0.8;
+	font-size: 3rem;
 }
 .Bar1000value-Mobile{
 	margin-left: -15%;
