--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -493,9 +493,9 @@
 	z-index: 12;
 	color: #ffffff;
 	margin-left: 10.5%;
-	margin-top: 7%;
+	margin-top: 41.5%;
 	line-height: 0.8;
-	
+	font-size: 3rem;
 }
 .Bar2000value-Mobile{
 	margin-left: -25%;
