--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -435,6 +435,7 @@
 	margin-left: 5%;
 	margin-top: 22.5%;
 	line-height: 0.8;
+	padding-bottom: 2%;
 	font-size: 3.5rem;
 }
 .Bar350value-Mobile{
@@ -465,6 +466,7 @@
 	color: #ffffff;
 	margin-left: 7.5%;
 	margin-top: 32.5%;
+	padding-bottom: 2%;
 	line-height: 0.8;
 	font-size: 3.5rem;
 }
@@ -496,6 +498,7 @@
 	color: #ffffff;
 	margin-left: 17.5%;
 	margin-top: 42.5%;
+	padding-bottom: 2%;
 	line-height: 0.8;
 	font-size: 3.5rem;
 }
