--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -557,6 +557,11 @@
 		margin-top: -52.5%;
 	
 	}
+	.LongtimeContent-Mobile{
+		margin-top: -13.5%;
+		font-size: 2.8rem;
+		line-height: 1.5;
+	}
 	
 }
 
