--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -557,6 +557,14 @@
 		margin-top: -52.5%;
 	
 	}
+	.Longtime-Mobile{
+		margin-top: 15%;
+		font-size: 2.8rem;
+		line-height: 1.5;
+	}
+	.AfterLongtime-Mobile{
+		margin-top: -15%;
+	}
 	.LongtimeContent-Mobile{
 		margin-top: -13.5%;
 		font-size: 2.8rem;
