--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -8,6 +8,15 @@
 	margin-top: 112%;
 	padding-bottom: 56%;
 }
+.bg3-1Mobile{
+	position: absolute;
+	z-index: -1;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	margin-top: 168%;
+	padding-bottom: 56%;
+}
 .tube{
 	position: absolute;
 	z-index: 11;
