--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -107,6 +107,18 @@ button{
 	font-size: 1.33rem;
 	display: none;
 }
+.view3-1Mobile{
+	font-family: Gen Jyuu Gothic ;
+	position: absolute;
+	z-index: 5;
+	margin-top: 168%;
+	left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: transparent;
+	font-size: 1.33rem;
+	display: none;
+}
 .view4{
 	font-family: Gen Jyuu Gothic ;
 	position: absolute;
