--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -589,7 +589,7 @@
 	height: 10%;
 	margin-left: 160%;
 	font-size: 8rem;
-	font-weight: lighter;
+	font-weight: 200;
 	transform: rotate(90deg);
 	color: #ffffff;
 	
