--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -12,14 +12,14 @@
 	overflow: hidden;
 
 }
-.SDC1BA{
+.OneBA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
 	width:4.79%;	
 	opacity: 0;
 }
-.SDC2BA{
+.TwoBA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
@@ -27,14 +27,14 @@
 	opacity: 0;
 
 }
-.SDC3BA{
+.ThreeBA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
 	width:4.79%;	
 	opacity: 0;
 }
-.SDC4BA{
+.FourBA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
@@ -374,7 +374,7 @@
     margin-left: -310%;
 	opacity: 0;
 }
-.SDCBG{
+.BG{
 	position: absolute;
 	z-index: 16;
 	margin-top: 0%;
@@ -387,7 +387,7 @@
 	
 
 }
-.SDCBG.open{
+.BG.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -396,7 +396,7 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
-.SDCMain{
+.Main{
 	position: absolute;
 	z-index: 17;
 	margin-left: 4.17%;
@@ -411,7 +411,7 @@
 	font-weight: normal;
 
 }
-.SDCSub{
+.Sub{
 	position: absolute;
 	z-index: 17;
 	margin-left: 32.55%;
@@ -420,7 +420,7 @@
 	font-size: 2.2rem;
 	font-weight: normal;
 }
-.SDCpart1{
+.part1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
@@ -438,13 +438,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.SDCpart1:hover{
+.part1:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/紅樹林.gif);
 
 }
 
-.SDCpart1.open{
+.part1.open{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -456,11 +456,11 @@
 	-webkit-background-size: contain;
 
 }
-.SDCpart1.open:hover{
+.part1.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.SDCpart1.close{
+.part1.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -470,7 +470,7 @@
 	opacity: 1;	
 }
 
-.SDCpart1Title{
+.part1Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -484,7 +484,7 @@
 	justify-content: center;
 }
 
-.SDCpart1Title.open{
+.part1Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -495,12 +495,12 @@
 
 }
 
-.SDCpart1Title.close{
+.part1Title.close{
     transition: 1s;
 	margin-top: 17.5%;
 	background-color: #1E3239;
 }
-.SDCpart1Content{
+.part1Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -514,7 +514,7 @@
 	align-items: center;
 	justify-content: flex-end;
 }
-.SDCpart1Content.open{
+.part1Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -528,7 +528,7 @@
 	
 }
 
-.SDCpart1Contenttext{
+.part1Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -540,12 +540,12 @@
 	justify-content: flex-start;
 	line-height: 1.8;
 }
-.SDCpart1Contenttext.open{
+.part1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.SDCpart2{
+.part2{
 	position: absolute;
 	z-index: 17;
 	margin-top: 8.5%;
@@ -563,12 +563,12 @@
 	-webkit-background-size: contain;
 
 }
-.SDCpart2:hover{
+.part2:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/大堡礁.gif);
 
 }
-.SDCpart2.open{
+.part2.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -581,11 +581,11 @@
 	-webkit-background-size: contain;
 
 }
-.SDCpart2.open:hover{
+.part2.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.SDCpart2.close{
+.part2.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -595,7 +595,7 @@
 	opacity: 1;	
 }
 
-.SDCpart2Title{
+.part2Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -608,7 +608,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.SDCpart2Title.open{
+.part2Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -618,12 +618,12 @@
 	background-color: transparent;
 }
 
-.SDCpart2Title.close{
+.part2Title.close{
     transition: 1s;
 	margin-top: 17.5%;
 	background-color: #1E3239;
 }
-.SDCpart2Content{
+.part2Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -637,7 +637,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.SDCpart2Content.open{
+.part2Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -649,7 +649,7 @@
 	color: #ffffff;
 }
 
-.SDCpart2Contenttext{
+.part2Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -662,12 +662,12 @@
 	line-height: 2;
 	
 }
-.SDCpart2Contenttext.open{
+.part2Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.SDCpart3{
+.part3{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -684,12 +684,12 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.SDCpart3:hover{
+.part3:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/鯊魚鮪魚.gif);
 
 }
-.SDCpart3.open{
+.part3.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -701,12 +701,12 @@
 	-webkit-background-size: contain;
 
 }
-.SDCpart3.open:hover{
+.part3.open:hover{
 	
 	-webkit-filter:brightness(1);
 
 }
-.SDCpart3.close{
+.part3.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -716,7 +716,7 @@
 	opacity: 1;	
 }
 
-.SDCpart3Title{
+.part3Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -729,7 +729,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.SDCpart3Title.open{
+.part3Title.open{
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -739,12 +739,12 @@
 	background-color: transparent;
 }
 
-.SDCpart3Title.close{
+.part3Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	background-color: #1E3239;
 }
-.SDCpart3Content{
+.part3Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -758,7 +758,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.SDCpart3Content.open{
+.part3Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -771,7 +771,7 @@
 	
 }
 
-.SDCpart3Contenttext{
+.part3Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -782,13 +782,13 @@
 	align-items: center;
 	justify-content: flex-start;
 }
-.SDCpart3Contenttext.open{
+.part3Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
 
-.SDCpart4{
+.part4{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -805,13 +805,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.SDCpart4:hover{
+.part4:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/高山物種滅絕.gif);
 
 }
 
-.SDCpart4.open{
+.part4.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -824,11 +824,11 @@
 	-webkit-background-size: contain;
 
 }
-.SDCpart4.open:hover{
+.part4.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.SDCpart4.close{
+.part4.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -838,7 +838,7 @@
 	opacity: 1;	
 }
 
-.SDCpart4Title{
+.part4Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -851,7 +851,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.SDCpart4Title.open{
+.part4Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -861,12 +861,12 @@
 	background-color: transparent;
 }
 
-.SDCpart4Title.close{
+.part4Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	background-color: #1E3239;
 }
-.SDCpart4Content{
+.part4Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -880,7 +880,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.SDCpart4Content.open{
+.part4Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -893,7 +893,7 @@
 	
 }
 
-.SDCpart4Contenttext{
+.part4Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -905,7 +905,7 @@
 	justify-content: flex-start;
 	 
 }
-.SDCpart4Contenttext.open{
+.part4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
