--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -12,14 +12,14 @@
 	overflow: hidden;
 
 }
-.OneBA{
+.SDC1BA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
 	width:4.79%;	
 	opacity: 0;
 }
-.TwoBA{
+.SDC2BA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
@@ -27,14 +27,14 @@
 	opacity: 0;
 
 }
-.ThreeBA{
+.SDC3BA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
 	width:4.79%;	
 	opacity: 0;
 }
-.FourBA{
+.SDC4BA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
@@ -374,7 +374,7 @@
     margin-left: -310%;
 	opacity: 0;
 }
-.BG{
+.SDCBG{
 	position: absolute;
 	z-index: 16;
 	margin-top: 0%;
@@ -387,7 +387,7 @@
 	
 
 }
-.BG.open{
+.SDCBG.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -396,7 +396,7 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
-.Main{
+.SDCMain{
 	position: absolute;
 	z-index: 17;
 	margin-left: 4.17%;
@@ -411,7 +411,7 @@
 	font-weight: normal;
 
 }
-.Sub{
+.SDCSub{
 	position: absolute;
 	z-index: 17;
 	margin-left: 32.55%;
@@ -420,7 +420,7 @@
 	font-size: 2.2rem;
 	font-weight: normal;
 }
-.part1{
+.SDCpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
@@ -438,13 +438,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part1:hover{
+.SDCpart1:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/紅樹林.gif);
 
 }
 
-.part1.open{
+.SDCpart1.open{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -456,11 +456,11 @@
 	-webkit-background-size: contain;
 
 }
-.part1.open:hover{
+.SDCpart1.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.part1.close{
+.SDCpart1.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -470,7 +470,7 @@
 	opacity: 1;	
 }
 
-.part1Title{
+.SDCpart1Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -484,7 +484,7 @@
 	justify-content: center;
 }
 
-.part1Title.open{
+.SDCpart1Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -495,12 +495,12 @@
 
 }
 
-.part1Title.close{
+.SDCpart1Title.close{
     transition: 1s;
 	margin-top: 17.5%;
 	background-color: #1E3239;
 }
-.part1Content{
+.SDCpart1Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -514,7 +514,7 @@
 	align-items: center;
 	justify-content: flex-end;
 }
-.part1Content.open{
+.SDCpart1Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -528,7 +528,7 @@
 	
 }
 
-.part1Contenttext{
+.SDCpart1Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -540,12 +540,12 @@
 	justify-content: flex-start;
 	line-height: 1.8;
 }
-.part1Contenttext.open{
+.SDCpart1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part2{
+.SDCpart2{
 	position: absolute;
 	z-index: 17;
 	margin-top: 8.5%;
@@ -563,12 +563,12 @@
 	-webkit-background-size: contain;
 
 }
-.part2:hover{
+.SDCpart2:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/大堡礁.gif);
 
 }
-.part2.open{
+.SDCpart2.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -581,11 +581,11 @@
 	-webkit-background-size: contain;
 
 }
-.part2.open:hover{
+.SDCpart2.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.part2.close{
+.SDCpart2.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -595,7 +595,7 @@
 	opacity: 1;	
 }
 
-.part2Title{
+.SDCpart2Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -608,7 +608,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part2Title.open{
+.SDCpart2Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -618,12 +618,12 @@
 	background-color: transparent;
 }
 
-.part2Title.close{
+.SDCpart2Title.close{
     transition: 1s;
 	margin-top: 17.5%;
 	background-color: #1E3239;
 }
-.part2Content{
+.SDCpart2Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -637,7 +637,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.part2Content.open{
+.SDCpart2Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -649,7 +649,7 @@
 	color: #ffffff;
 }
 
-.part2Contenttext{
+.SDCpart2Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -662,12 +662,12 @@
 	line-height: 2;
 	
 }
-.part2Contenttext.open{
+.SDCpart2Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part3{
+.SDCpart3{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -684,12 +684,12 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part3:hover{
+.SDCpart3:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/鯊魚鮪魚.gif);
 
 }
-.part3.open{
+.SDCpart3.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -701,12 +701,12 @@
 	-webkit-background-size: contain;
 
 }
-.part3.open:hover{
+.SDCpart3.open:hover{
 	
 	-webkit-filter:brightness(1);
 
 }
-.part3.close{
+.SDCpart3.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -716,7 +716,7 @@
 	opacity: 1;	
 }
 
-.part3Title{
+.SDCpart3Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -729,7 +729,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part3Title.open{
+.SDCpart3Title.open{
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -739,12 +739,12 @@
 	background-color: transparent;
 }
 
-.part3Title.close{
+.SDCpart3Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	background-color: #1E3239;
 }
-.part3Content{
+.SDCpart3Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -758,7 +758,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.part3Content.open{
+.SDCpart3Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -771,7 +771,7 @@
 	
 }
 
-.part3Contenttext{
+.SDCpart3Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -782,13 +782,13 @@
 	align-items: center;
 	justify-content: flex-start;
 }
-.part3Contenttext.open{
+.SDCpart3Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
 
-.part4{
+.SDCpart4{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -805,13 +805,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part4:hover{
+.SDCpart4:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/高山物種滅絕.gif);
 
 }
 
-.part4.open{
+.SDCpart4.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -824,11 +824,11 @@
 	-webkit-background-size: contain;
 
 }
-.part4.open:hover{
+.SDCpart4.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.part4.close{
+.SDCpart4.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -838,7 +838,7 @@
 	opacity: 1;	
 }
 
-.part4Title{
+.SDCpart4Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -851,7 +851,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part4Title.open{
+.SDCpart4Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -861,12 +861,12 @@
 	background-color: transparent;
 }
 
-.part4Title.close{
+.SDCpart4Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	background-color: #1E3239;
 }
-.part4Content{
+.SDCpart4Content{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -880,7 +880,7 @@
 	justify-content: flex-end;
 	opacity: 0;
 }
-.part4Content.open{
+.SDCpart4Content.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
@@ -893,7 +893,7 @@
 	
 }
 
-.part4Contenttext{
+.SDCpart4Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -905,7 +905,7 @@
 	justify-content: flex-start;
 	 
 }
-.part4Contenttext.open{
+.SDCpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
