--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -575,7 +575,7 @@
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url( "../../Animation/WorldDamage/封面/Shark.png");
+	background-image: url(../../Animation/WorldDamage/封面/Shark.png);
 	display: flex;
 	align-items: center;
 	justify-content: center;
